--- a/test.html
+++ b/test.html
@@ -58,6 +58,24 @@
 
       alert('done: ' + p.toString());
     }
+
+    function rundsatests() {
+      var jwk = require("./jwk");
+      var start = new Date();
+      var count = 10;
+      function do_next() {
+         jwk.KeyPair.generate("DS",256);
+         count -= 1;
+         if (count > 0)
+           window.setTimeout(do_next, 0);
+         else {
+          var end = new Date();
+          alert("10 keygens: " + (end-start));
+         }
+      }
+
+      do_next();
+    }
   </script>
 </head>
 <body>
@@ -66,4 +84,5 @@
 <button onclick="runperftests();">run perf tests</button>
 <button onclick="runperftests2();">run perf tests 2</button>
 <button onclick="onePrime();">one prime</button>
+<button onclick="rundsatests();">run dsa tests</button>
 </body>
