--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
   <script type="text/javascript">
     // a small subset of vows tests
     function runkeygen() {
+      require("./lib/algs/ds");
       var jwcrypto = require("./lib/jwcrypto");
       var start = new Date();
       jwcrypto.addEntropy("12345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890");
